k8s/manifest/deployment.yaml
# react-recipe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-recipe
  labels:
    app: react-recipe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-recipe
  template:
    metadata:
      labels:
        app: react-recipe
    spec:
      containers:
      - name: react-recipe
        image: timagxreactcicd:75
        ports:
        - containerPort: 80
