k8s/manifest/service.yaml
# react-recipe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-recipe
  labels:
    app: react-recipe
spec:
  type: ClusterIP
  selector:
    app: react-recipe
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
