k8s/manifest/ingress.yaml
# react-recipe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-recipe-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: react-recipe.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-recipe-service
            port:
              number: 80
